# Spotify-to-Apple-Music

./: .gitignore  Makefile  README.md  spotify-to-apple-music.install  spotify-to-apple-music.opam
spotify-to-apple-music/: apple_music.ml  apple_music.mli  apple_music_playlist.atd  apple_music_search.atd  jbuild  main.ml  migration.ml  spotify.atd  spotify.ml  spotify.mli
